--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en"><head>
 <title>AryaKarami</title>
 <script src="template/packages.js" type="text/javascript"></script>
+<link href="template/ubuntu-new.css" rel="stylesheet" type="text/css" media="all">
+
 
 </head>
 <body>    <div id="wrapper">
