--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div id="content">
 
   <h1>AryaKarami</h1><!-- messages.tmpl -->
-<p> Welcome to my home page.<br><br> My name is Arya Karami and I am a graduate student of Industrial Engineering at the <a href="http://sharif.ir"> Sharif University of Technology</a>.I am interested in mathematical understanding of efficient algorithms for machine learning, CPD, Stochastic Processes and Optimization. 
+<p> Welcome to my home page.<br><br> My name is Arya Karami and I am a graduate student of Industrial Engineering at the <a href="http://www.en.sharif.edu/"> Sharif University of Technology</a>.I am interested in mathematical understanding of efficient algorithms for machine learning, CPD, Stochastic Processes and Optimization. 
   
 <p>Questions? Send me an email! karamiarya@yahoo.com</p>
 
