--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <div id="content">
 
   <h1>AryaKarami</h1><!-- messages.tmpl -->
-<p> Welcome to my home page.<br><br> My name is Arya Karami and I am a graduate student of Industrial Engineering at the <a href="http://www.en.sharif.edu/"> Sharif University of Technology</a>.I am interested in mathematical understanding of efficient algorithms for machine learning, CPD, Stochastic Processes and Optimization. 
-  
-<p>Questions? Send me an email! karamiarya@yahoo.com</p>
+<p> Welcome to my home page.<br><br> My name is Arya Karami and I am a graduate student of Industrial Engineering at the <a href="http://sharif.ir">Sharif University of Technology</a>. I am interested in mathematical modeling.
+
+</p>
+
+
+<p>Questions? Comments? Send me an email! karamiarya@yahoo.com</p>
 
 
 <hr>
@@ -29,7 +32,7 @@
 <ul>
 
 <li>B.Sc. in <b>Industrial Engineering</b>, Sharif University of Technology, Tehran, Iran (2012-2016)<br>
-Ranked in the top 5% of class, GPA 4.00/4.00
+Ranked in the top 5% of class, GPA 20/20
 </li>
 </ul>
 
@@ -37,10 +40,7 @@ Ranked in the top 5% of class, GPA 4.00/4.00
 <hr>
 <h2>Scientific Interests</h2>
 <ul>
-<li>Applied Probability</li>
-<li>Social Network analysis</li>
-<li>Stochastic Optimization</li>
-
+<li>Machine Learning and Statistical Learning Theory</li>
 </ul>
 
 <hr>
@@ -48,7 +48,41 @@ Ranked in the top 5% of class, GPA 4.00/4.00
 <h2> Experiences </h2>
 <h3> Research Experiences </h3>
 
-I am currently a member of the IE association.
+I am currently a member of the IEA. I work under the supervision of <a href = "http://sina.sharif.edu/~niaki/">Prof. Akhavan Niaki</a> on CPD.
+
+<br><br>
+
+<br><br>
+
+
+<h3> Teaching Experiences </h3>
+During my undergraduate at Sharif, I have been the teaching assistant for various courses.
+
+<h3> Work Experiences </h3>
+
+<hr>
+<h2>Selected Coursework</h2>
+<p class="tab">
+<h3>Graduate Courses</h3>
+Machine Learning.
+
+<p class="tab">
+<h3>Selected Undergraduate Courses</h3>
+Probability and Statistics
+</p>
+<hr>
+
+<h2 id="honors">Honors</h2>
+
+<p class="tab">
+<dt>Ranked 1st among students of IE</dt>
+    
+<hr>
+<h2>Talks and Reports</h2>
+
+<hr>
+<div id="fineprint" class="bordertop">
+<div id="impressum">
 
 <p>
 
